--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,32 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/adapter_config.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/adapter_config.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/adapter_model.safetensors
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/adapter_model.safetensors
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/added_tokens.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/added_tokens.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/chat_template.jinja
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/chat_template.jinja
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/merges.txt
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/merges.txt
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/optimizer.pt
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/README.md
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/README.md
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/rng_state.pth
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/scheduler.pt
+/.idea/shelf/Uncommitted_changes_before_Update_at_1_31_26,_12_03 PM_[Changes]/shelved.patch
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/special_tokens_map.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/special_tokens_map.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/tokenizer.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/tokenizer.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/tokenizer_config.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/tokenizer_config.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/trainer_state.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/training_args.bin
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/training_args.bin
+/.idea/shelf/Uncommitted_changes_before_Update_at_1_31_26__12_03PM__Changes_.xml
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/checkpoint-50/vocab.json
+/codes/training_QLoRa/outputs-lora-qwen-3-30b-a3b/vocab.json
+/.idea/workspace.xml
